# data-structures-and-algorithms-in-python

./: .gitignore  LICENSE  README.md  ch-01.ipynb  ch-03.ipynb  pyproject.toml  shell.nix
notebooks/: ch-01.ipynb  ch-03.ipynb
