[tool.poetry]
name = "ds-algo-python"
version = "0.1.0"
description = ""
authors = ["David Mynors <hello@davidmyno.rs>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
